added Quick Access "widget" and a reset button for the template dashboard

--- a/webclient/public/locales/en/common.json
+++ b/webclient/public/locales/en/common.json
@@ -7,6 +7,8 @@
     "wcdf": "CDE Dashboard",
     "xdash": "Pentaho Dashboard",
     "prpt": "Pentaho Report",
-    "prpti": "Pentaho Interactive Report"
+    "prpti": "Pentaho Interactive Report",
+    "kjb": "Job",
+    "ktr": "Transformation"
   }
 }
