more tweaks to frontend

--- a/webclient/public/locales/en/common.json
+++ b/webclient/public/locales/en/common.json
@@ -10,5 +10,7 @@
     "prpti": "Pentaho Interactive Report",
     "kjb": "Job",
     "ktr": "Transformation"
-  }
+  },
+  "editor": "Edit",
+  "viewer": "View"
 }
